{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 30,
  "lineage": "a879fe39-1ab0-0e12-dffd-fdc3465bbb7d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/frontendIPConfigurations/publicFrontEnd",
                "load_balancer_rules": [
                  "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/loadBalancingRules/http-rule"
                ],
                "name": "publicFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/publicIPAddresses/lb-public-ip"
              }
            ],
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer",
            "location": "westeurope",
            "name": "web-loadbalancer",
            "resource_group_name": "compute",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/backendAddressPools/backend-pool",
            "load_balancing_rules": [
              "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/loadBalancingRules/http-rule"
            ],
            "loadbalancer_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer",
            "name": "backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/probes/http-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/loadBalancingRules/http-rule"
            ],
            "loadbalancer_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/backendAddressPools/backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/frontendIPConfigurations/publicFrontEnd",
            "frontend_ip_configuration_name": "publicFrontEnd",
            "frontend_port": 80,
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer",
            "name": "http-rule",
            "probe_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/loadBalancers/web-loadbalancer/probes/http-probe",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.http_probe",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkInterfaces/db-nic",
            "internal_domain_name_suffix": "r2ewilsuh3suzj3h1lkkhrrbtd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/db-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-ED-8D-5B-B1-C9",
            "name": "db-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "compute",
            "virtual_machine_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Compute/virtualMachines/dbvm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "db-nic",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkInterfaces/web-nic-1",
            "internal_domain_name_suffix": "r2ewilsuh3suzj3h1lkkhrrbtd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "web-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "compute"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "web-nic-1",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkInterfaces/web-nic-2",
            "internal_domain_name_suffix": "r2ewilsuh3suzj3h1lkkhrrbtd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-5F-BF-69",
            "name": "web-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "compute",
            "virtual_machine_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Compute/virtualMachines/webvm2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "web-nic-2",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "westeurope",
            "name": "db-nsg",
            "resource_group_name": "compute",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-DB-From-Web",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "db-nsg",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "westeurope",
            "name": "web-nsg",
            "resource_group_name": "compute",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "web-nsg",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_mysql_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkSecurityGroups/db-nsg/securityRules/Allow-DB-From-Web",
            "name": "Allow-DB-From-Web",
            "network_security_group_name": "db-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "compute",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-DB-From-Web",
            "network_security_group_name": "db-nsg",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2"
          },
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/publicIPAddresses/lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.4.16.65",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "lb-public-ip",
            "resource_group_name": "compute",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lb-public-ip",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "compute",
            "virtual_network_name": "VNet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "db-subnet",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2",
            "virtual_network_name": "VNet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "compute",
            "virtual_network_name": "VNet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "web-subnet",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2",
            "virtual_network_name": "VNet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/db-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/web-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2e64098f-3f54-4c65-a7a7-dad4a3c6219b",
            "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1",
            "location": "westeurope",
            "name": "VNet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "compute",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/web-subnet",
                "name": "web-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkSecurityGroups/web-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/virtualNetworks/VNet1/subnets/db-subnet",
                "name": "db-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/900ada38-6d47-4536-9a78-505b52cfd9b2/resourceGroups/compute/providers/Microsoft.Network/networkSecurityGroups/db-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "VNet1",
            "resource_group_name": "compute",
            "subscription_id": "900ada38-6d47-4536-9a78-505b52cfd9b2"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}